feat: notification service
